--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
   "name": "sistema-cultivo",
   "version": "1.0.0",
-  "description": "Sistema de gestion de cultivo",
+  "description": "Sistema de Cultivo",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/henrycerpam/sistema-cultivo.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "react",
     "javascript"
   ],
-  "author": "Andres Navarro, Cristian Gonzalez, Erickson Reinoso, Gloria Polo, Henry Cerpa, Yeison Diaz",
+  "author": "Andres Navarro <andresfn@uninorte.edu.co>, Gloria Polo <mgpolo@uninorte.edu.co>, Erickson Reinoso <reinosoe@uninorte.edu.co>, Cristian Gonzalez <ccvidal@uninorte.edu.co>, Yeison Diaz <venegasy@uninorte.edu.co>, Henry Cerpa <hacerpa@uninorte.edu.co>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/henrycerpam/sistema-cultivo/issues"
-  },
-  "homepage": "https://github.com/henrycerpam/sistema-cultivo#readme",
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "babel-loader": "^8.2.3",
-    "html-loader": "^3.0.1",
-    "html-webpack-plugin": "^5.5.0",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.2.0",
+    "sass": "^1.38.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1"
   }
 }
