--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
   },
   "devDependencies": {
@@ -33,6 +32,7 @@
     "mini-css-extract-plugin": "^2.4.5",
     "sass": "^1.43.5",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^4.9.1"
   }
 }
