--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^2.8.0",
     "react-router-dom": "^6.0.2",
     "webpack": "^5.50.0",
     "webpack-dev-server": "^4.0.0"
