--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "bootstrap": "^5.1.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^2.8.0",
+    "react-leaflet": "^3.2.2",
     "react-router-dom": "^6.0.2",
     "webpack": "^5.50.0",
     "webpack-dev-server": "^4.0.0"
