--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "antd": "^4.17.3",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.1.3",
     "html-loader": "^2.1.2",
