--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "antd": "^4.17.3",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.1.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "leaflet": "^1.7.1",
+    "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-router-dom": "^6.0.2",
-    "webpack": "^5.50.0",
+    "universal-cookie": "^4.0.4",
+    "webpack": "^5.65.0",
     "webpack-dev-server": "^4.0.0"
   },
   "devDependencies": {
