--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.7.1",
     "md5": "^2.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-router-dom": "^6.0.2",
